[project]
name = "projeto-padaria"
version = "0.1.0"
description = ""
authors = [
    {name = "Gustavo Loredo",email = "gustavoloredocosta@hotmail.com"}
]
requires-python = ">=3.10,<4"
dependencies = [
    "flask (>=3.1.3,<4.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "flask-simplelogin (>=0.2.0,<0.3.0)",
    "gunicorn (>=25.1.0,<26.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
